--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -2,48 +2,160 @@
 
 @using CrucibleBugTracker.Services.Interfaces
 @using CrucibleBugTracker.Enums
+@using Microsoft.AspNetCore.Identity;
+
 
 @inject IBTFileService _FileService
+@inject IBTRoleService _RoleService
+@inject IBTProjectService _ProjectService
+@inject UserManager<BTUser> _userManager
 
 @{
     ViewData["Title"] = "Details";
+    BTUser? projectManager = await _ProjectService.GetProjectManagerAsync(Model.Id, Model.CompanyId);
+    string? userId = (await _userManager.GetUserAsync(User))?.Id;
+
 }
 
-<h1>Details</h1>
+
+<div class="p-3 d-flex flex-column">
+    <h1>Project Details</h1>
+    <div class="row g-3 mb-3">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header d-flex">
+                    <h5>
+                        @{
+                            if (Model.Archived)
+                            {
+                                <span class="badge bg-secondary">Archived</span>
+                            }
+                            else if (Model.StartDate > DateTime.UtcNow)
+                            {
+                                <span class="badge bg-secondary">Not Started</span>
+                            }
+                            else if (Model.EndDate < DateTime.UtcNow)
+                            {
+                                <span class="badge bg-danger">Past Due</span>
+                            }
+                            else
+                            {
+                                <span class="badge bg-success">In Progress</span>
+                            }
+                        }
+                    </h5>
+                    @if (User.IsInRole(nameof(BTRoles.Admin)) || projectManager?.Id == userId)
+                    {
+                        <div class="ms-auto">
+                            <a class="btn btn-sm btn-secondary" asp-controller="Projects" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+                            <a class="btn btn-sm btn-secondary" href="#">Archive / Restore</a>
+                        </div>
+                    }
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">@Model.Name</h5>
+                    <h6 class="card-subtitle mb-4 text-muted">Start Date: @Model.StartDate.ToString("MMMM dd, yyyy")</h6>
+                    <h6 class="card-subtitle mb-4 text-muted">End Date: @Model.EndDate.ToString("MMMM dd, yyyy")</h6>
+                    <p class="card-text">
+                        @Model.Description
+                    </p>
+                </div>
+                <div class="card-footer fw-bold lead">
+                    Project Manager:
+                    @{
+                        if (string.IsNullOrEmpty(projectManager?.FullName))
+                        {
+                            <span>Unassigned</span>
+                        }
+                        else
+                        {
+                            <span>@projectManager.FullName</span>
+                        }
+                    }
+                </div>
+            </div>
+        </div>
+        <div class="col-12">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="card h-100">
+                        <div class="card-header">
+                            Developers
+                        </div>
+                        <div class="card-body">
+                            <ul>
+                                @{
+                                    foreach (BTUser member in Model.Members)
+                                    {
+                                        if (await _RoleService.IsUserInRole(member, nameof(BTRoles.Developer)))
+                                        {
+                                            <li>
+                                                @member.FullName
+                                            </li>
+                                        }
+                                    }
+                                }
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="card h-100">
+                        <div class="card-header">
+                            Submitters
+                        </div>
+                        <div class="card-body">
+                            <ul>
+                                @{
+                                    foreach (BTUser member in Model.Members)
+                                    {
+                                        if (await _RoleService.IsUserInRole(member, nameof(BTRoles.Submitter)))
+                                        {
+                                            <li>
+                                                @member.FullName
+                                            </li>
+                                        }
+                                    }
+                                }
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        @if (User.IsInRole(nameof(BTRoles.Admin)) || projectManager?.Id == userId)
+        {
+            <div class="col-12">
+                <div class="d-flex flex-column align-items-stretch align-items-lg-end">
+                    <a href="#" class="btn btn-secondary btn-sm">
+                        Manage Project Members
+                    </a>
+                </div>
+            </div>
+        }
+    </div>
+    <div class="table-responsive mt-4">
+        <table class="table table-hover table-bordered text-center no-wrap" id="ticketTable">
+            @* TICKETS TABLE *@
+            <tr>
+                <td>
+                    Project Tickets Go Here
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="mt-5 ms-auto">
+        <a asp-controller="Projects" asp-action="Index" class="btn btn-dark">Back to List</a>
+    </div>
+</div>
 
 <div>
-    <h4>Project</h4>
-    <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Created)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Created)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ImageFormFile)
@@ -51,22 +163,16 @@
         <dd class="col-sm-10">
             <img src="@_FileService.ConvertByteArrayToFile(Model.ImageFileData, Model.ImageFileType, DefaultImage.ProjectImage)" class="img-fluid" id="projectImage" />
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Archived)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Archived)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Company)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Company!.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ProjectPriority)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ProjectPriority!.Name)
         </dd>
     </dl>
