--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -60,6 +60,26 @@
                 <span asp-validation-for="ProjectPriorityId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Developers</label>
+                <select class="form-control" asp-items="@ViewBag.ProjectDevelopers" name="developerIds" multiple></select>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Submitters</label>
+                <select class="form-control" asp-items="@ViewBag.ProjectSubmitters" name="submitterIds" multiple></select>
+            </div>
+            @{
+                if (User.IsInRole(nameof(BTRoles.Admin)))
+                {
+                    <div class="form-group">
+                        <label class="control-label">Project Manager</label>
+                        <select class="form-control" asp-items="@ViewBag.ProjectManagers" name="projectManagerId">
+                            <option value="@null">Unassigned</option>
+                        </select>
+                    </div>
+                }
+
+            }
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
