--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -6,10 +6,10 @@
 @inject IBTFileService _FileService
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = ViewBag.Title;
 }
 
-<h1>Index</h1>
+<h1>@ViewBag.Title</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -80,7 +80,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Archive" asp-route-id="@item.Id">Archive</a>
+                <a asp-action="Archive" asp-route-id="@item.Id">Archive</a> |
+                <a asp-action="AssignPM" asp-route-id="@item.Id">Assign PM</a>
             </td>
         </tr>
 }
