--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using CrucibleBugTracker.Enums;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,22 +12,22 @@
     <link rel="stylesheet" href="~/CrucibleBugTracker.styles.css" asp-append-version="true" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../../assets/media/image/favicon.png" />
+    <link rel="shortcut icon" href="~/assets/media/image/favicon.png" />
 
     <!-- Main css -->
-    <link rel="stylesheet" href="../../vendors/bundle.css" type="text/css">
+    <link rel="stylesheet" href="~/vendors/bundle.css" type="text/css">
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Daterangepicker -->
-    <link rel="stylesheet" href="../../vendors/datepicker/daterangepicker.css" type="text/css">
+    <link rel="stylesheet" href="~/vendors/datepicker/daterangepicker.css" type="text/css">
 
     <!-- DataTable -->
-    <link rel="stylesheet" href="../../vendors/dataTable/datatables.min.css" type="text/css">
+    <link rel="stylesheet" href="~/vendors/dataTable/datatables.min.css" type="text/css">
 
     <!-- App css -->
-    <link rel="stylesheet" href="../../assets/css/app.min.css" type="text/css">
+    <link rel="stylesheet" href="~/assets/css/app.min.css" type="text/css">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -723,20 +725,64 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-controller="Projects" asp-action="Index">
+                            <a>
                                 <span class="nav-link-icon">
-                                    <i data-feather="pie-chart"></i>
+                                    <i data-feather="shopping-cart"></i>
                                 </span>
                                 <span>Projects</span>
                             </a>
+                            <ul>
+                                <li>
+                                    <a asp-controller="Projects" asp-action="Index">All Projects</a>
+                                </li>
+                                @{
+                                    if (!User.IsInRole(nameof(BTRoles.Admin)))
+                                    {
+                                        <li>
+                                            <a asp-controller="Projects" asp-action="MyProjects">My Projects</a>
+                                        </li>
+                                    }
+                                }
+                                <li>
+                                    <a asp-controller="Projects" asp-action="Active">Active Projects</a>
+                                </li>
+                                <li>
+                                    <a asp-controller="Projects" asp-action="Archived">Archived Projects</a>
+                                </li>
+                                <li>
+                                    <a asp-controller="Projects" asp-action="Unassigned">Unassigned Projects</a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <a asp-controller="Tickets" asp-action="Index">
+                            <a>
                                 <span class="nav-link-icon">
-                                    <i data-feather="pie-chart"></i>
+                                    <i data-feather="shopping-cart"></i>
                                 </span>
                                 <span>Tickets</span>
                             </a>
+                            <ul>
+                                <li>
+                                    <a asp-controller="Tickets" asp-action="Index">All Tickets</a>
+                                </li>
+                                @{
+                                    if (!User.IsInRole(nameof(BTRoles.Admin)))
+                                    {
+                                        <li>
+                                            <a asp-controller="Tickets" asp-action="MyTickets">My Tickets</a>
+                                        </li>
+                                    }
+                                }
+                                <li>
+                                    <a asp-controller="Tickets" asp-action="Active">Active Tickets</a>
+                                </li>
+                                <li>
+                                    <a asp-controller="Tickets" asp-action="Archived">Archived Tickets</a>
+                                </li>
+                                <li>
+                                    <a asp-controller="Tickets" asp-action="Unassigned">Unassigned Tickets</a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <a href="chat.html">
@@ -1136,7 +1182,7 @@
                 <!-- Content -->
                 <div class="content ">
                     @RenderBody()
-                    
+
                 </div>
                 <!-- ./ Content -->
                 <!-- Footer -->
@@ -1158,22 +1204,22 @@
     </div>
     <!-- ./ Layout wrapper -->
     <!-- Main scripts -->
-    <script src="../../vendors/bundle.js"></script>
+    <script src="~/vendors/bundle.js"></script>
 
     <!-- Apex chart -->
-    <script src="../../vendors/charts/apex/apexcharts.min.js"></script>
+    <script src="~/vendors/charts/apex/apexcharts.min.js"></script>
 
     <!-- Daterangepicker -->
-    <script src="../../vendors/datepicker/daterangepicker.js"></script>
+    <script src="~/vendors/datepicker/daterangepicker.js"></script>
 
     <!-- DataTable -->
-    <script src="../../vendors/dataTable/datatables.min.js"></script>
+    <script src="~/vendors/dataTable/datatables.min.js"></script>
 
     <!-- Dashboard scripts -->
-    <script src="../../assets/js/examples/pages/dashboard.js"></script>
+    <script src="~/assets/js/examples/pages/dashboard.js"></script>
 
     <!-- App scripts -->
-    <script src="../../assets/js/app.min.js"></script>
+    <script src="~/assets/js/app.js"></script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
